# caroline-assink-teste-tecnico-senior-rpa

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  README2.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
api/: main.py  schemas.py
api/routes/: crawl.py  jobs.py  results.py
core/: config.py  database.py  rabbitmq.py
models/: __init__.py  hockey.py  job.py  oscar.py
scripts/: init_db.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_config.py  test_hockey_parser.py  test_schemas.py
worker/: __init__.py  main.py
worker/crawlers/: __init__.py  hockey.py  oscar.py
